--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <h1 class="logo" ></h1>
             <nav>
                 <a href ="#"> Home </a>
-                <a href ="#"> Articles </a> 
-                <a href ="#"> Blog </a>
-                <a href ="#"> Music </a>
+                <a href ="articles.html"> Articles </a> 
+                <a href ="blog.html"> Blog </a>
+                <a href ="music.html"> Music </a>
                 <a href = "#"> Shop </a>
                 <a href = "#"> Connect </a>
             </nav>
@@ -41,9 +41,9 @@
         <div class="dark-panel" id="site-guide">
            <h2>Explore</h2>
             <nav class="navmenu">
-               <a href="#"><img src="icon/article-icon.png" alt="Articles" onmouseover="this.src='icon/article-icon-on.png';" onmouseout="this.src='icon/article-icon.png'"></a> 
-               <a href="#"><img src="icon/blog-icon.png" alt="Articles" onmouseover="this.src='icon/blog-icon-on.png';" onmouseout="this.src='icon/blog-icon.png'"></a> 
-               <a href="#"><img src="icon/music-icon.png" alt="Articles" onmouseover="this.src='icon/music-icon-on.png';" onmouseout="this.src='icon/music-icon.png'"></a>
+               <a href="articles.html"><img src="icon/article-icon.png" alt="Articles" onmouseover="this.src='icon/article-icon-on.png';" onmouseout="this.src='icon/article-icon.png'"></a> 
+               <a href="blog.html"><img src="icon/blog-icon.png" alt="Articles" onmouseover="this.src='icon/blog-icon-on.png';" onmouseout="this.src='icon/blog-icon.png'"></a> 
+               <a href="music.html"><img src="icon/music-icon.png" alt="Articles" onmouseover="this.src='icon/music-icon-on.png';" onmouseout="this.src='icon/music-icon.png'"></a>
                <a href="#"><img src="icon/shop-icon.png" alt="Articles" onmouseover="this.src='icon/shop-icon-on.png';" onmouseout="this.src='icon/shop-icon.png'"></a>
                <a href="#"><img src="icon/connect-icon.png" alt="Articles" onmouseover="this.src='icon/connect-icon-on.png';" onmouseout="this.src='icon/connect-icon.png'"></a>
             </nav>
@@ -53,7 +53,7 @@
             <h2> New Work </h2>
             <article>
                 <section class="card">
-                    <div></div>
+
                     <Header>
                         <h4> New Release! </h4>
                         <img src="images\Basketball.jpg" alt="4 quaters cover art">
