--- a/index.html
+++ b/index.html
@@ -119,9 +119,10 @@
         
         <div class="dark-panel" id="upcoming">
             <h2> Work in Progress </h2>
-                    <p> Your looking at the first iteration of itsworking progress. Got plenty in the pipeline im hoping to bring to you all this winter. Not everything on the site is functional atm but we working! also got 4-quarters and a few other songsa 
-                        hitting all streaming platforms in january, New articles coming every week, and i cant say exactly when since its not at the top of my list but the working progress podcast will
-                        be coming back as well. I'm grateful for all who stopped by. Saved a few screenshots of the page as it is now will be interesting to see how it looks a year from now.  </p>                    
+                    <p> Your looking at the first iteration of itsworking progress. Got plenty in the pipeline im hoping to bring to you all this winter. Not everything on the site is functional atm  but we working! 
+                        also got my first single on all streaming platforms, New articles coming every week, and i cant say exactly when since its not at the top of my list but the working progress podcast will
+                        be coming back as well. I'm grateful for all who stopped by. Saved a few screenshots of the page as it is now will be interesting to see how it looks a year from now. Sign up form not active at the moment will
+                        take care of that over the weekend. </p>                    
         </div>
 
         
