--- a/connect.html
+++ b/connect.html
@@ -20,7 +20,7 @@
             <h1 class="logo" ></h1>
             <nav>
                 <a href ="index.html" class="home-link"> Home </a>
-                <a href ="articles.html" class="article-link"> Articles </a> 
+                <a href ="articles-bitcoin.html" class="article-link"> Articles </a> 
                 <a href ="blog.html" class="blog-link"> Blog </a>
                 <a href ="music.html" class="music-link"> Music </a>
                 <a href = "#"> Shop </a>
@@ -96,26 +96,28 @@
                 </section>
 
              <!-- begin OF Right panel  -->
-            <section class="right-side">
-                <article class="blog-card">
+             <section class="right-side">
+                <article class= "blog-card">
                     <header>
-                        <h3>Blog Title</h3>
-                        <p>Blog date</p>
+                        <h4> New Blog Post </h4>
+                        <img src="images\star.jpg" alt="Thank you letter">
                     </header>
-                    <section class="blog-img">
-                        <img src="images/Basketball.jpg">
-                    </section>
-                    <section class="blurb">
-                        <p>This can be a nice chuncky munky style exceprt from the blog post i usually write them in
-                            story like fashion anyway. once the draw is in i can catch en with the read more button. yes yes yall u dont stop.
-                        </p>
-                    </section>
-                   <hr>
+                    <h3> Many Thanks </h3>
+                    <p>
+                        "The Darkness?" I chuckle softly. "The darkness is coming?" I roar with laughter. 
+                                "Finally they can see it!" I exclaim as my laughter twists into weeping. 
+                                I tried to warn them...Back when the screams were just whispers… 
+                    </p>
+                    <a href="blog.html"><button style="width:80px;">GO!</button></a>
+                </article>
+                    <hr>
+                    
                     <section class="ad-card">
                         <p>Advertisement</p>
                         <img src="images/ad-space.png">
                     </section>
                     <hr>
+
                     <section class="signup-card" >
                         <h2> are you a workaholic? </h2>
                         <p>Enjoying the site? want to recieve updates when new content is posted?</p>
