--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h1 class="logo" ></h1>
             <nav>
                 <a href ="#" class="home-link"> Home </a>
-                <a href ="articles.html" class="article-link"> Articles </a> 
+                <a href ="articles-bitcoin.html" class="article-link"> Articles </a> 
                 <a href ="blog.html" class="blog-link"> Blog </a>
                 <a href ="music.html" class="music-link"> Music </a>
                 <a href = "#"> Shop </a>
@@ -55,7 +55,7 @@
         <div class="dark-panel" id="site-guide">
            <h2>Explore</h2>
             <nav class="navmenu">
-               <a href="articles.html"><img src="icon/article-icon.png" alt="Articles" onmouseover="this.src='icon/article-icon-on.png';" onmouseout="this.src='icon/article-icon.png'"></a> 
+               <a href="articles-bitcoin.html"><img src="icon/article-icon.png" alt="Articles" onmouseover="this.src='icon/article-icon-on.png';" onmouseout="this.src='icon/article-icon.png'"></a> 
                <a href="blog.html"><img src="icon/blog-icon.png" alt="Articles" onmouseover="this.src='icon/blog-icon-on.png';" onmouseout="this.src='icon/blog-icon.png'"></a> 
                <a href="music.html"><img src="icon/music-icon.png" alt="Articles" onmouseover="this.src='icon/music-icon-on.png';" onmouseout="this.src='icon/music-icon.png'"></a>
                <a href="#"><img src="icon/shop-icon.png" alt="Articles" onmouseover="this.src='icon/shop-icon-on.png';" onmouseout="this.src='icon/shop-icon.png'"></a>
@@ -90,13 +90,17 @@
                 <section class="news-card">
                     <header> 
                         <h4> New Article </h4>
-                        <img src="images\magnify.jpg" alt="magnifying glass">
+                        <img src="images/bitcoin.jpg" alt="magnifying glass">
                     </header>
-                    <h3> The importancy of inquiry </h3>
-                    <p> Inquiry - an act of asking for information. Is the world round or flat? Should be an easy answer for most but how do you know? What 
-                        makes that good enough? what other ways of knowing are there? Dive in to the full article for more. </p>
-                        
-                    <a href="articles.html"><button style="width:80px;">GO!</button></a>
+                    <h3> Why Bitcoin Matters </h3>
+                    <p> Unless you’ve been living under a rock in a hole in the wall you have probably 
+                        heard about bitcoin by now.  You know that weird digital money that silicon valley
+                         types love. Maybe you were curious or maybe you were dismissive like many. Blockchain?
+                          Private keys? Hash rate? Crypto wallets? Just the jargon alone can seem intimidating
+                           especially for the technically challenged. After all, there is no help desk or 1-800 number you can 
+                           call if you need support. Is it even worth it?  </p>
+
+                    <a href="articles-bitcoin.html"><button style="width:80px;">GO!</button></a>
                 </section>
         <!-- card 3 -->
                 <section class= "blog-card">
