--- a/music.html
+++ b/music.html
@@ -21,7 +21,7 @@
             <h1 class="logo" ></h1>
             <nav>
                 <a href ="index.html" class="home-link"> Home </a>
-                <a href ="articles.html" class="article-link"> Articles </a> 
+                <a href ="articles-bitcoin.html" class="article-link"> Articles </a> 
                 <a href ="blog.html" class="blog-link"> Blog </a>
                 <a href ="music.html" class="music-link"> Music </a>
                 <a href = "#"> Shop </a>
