--- a/articles-bitcoin.html
+++ b/articles-bitcoin.html
@@ -183,7 +183,7 @@
                                                             and neccesary experience. The next few months were rough. I still havent had an actual paycheck since that date but i Continued to push towards my dreams and trust that tings would align.
                                                             When I got word that a second round of stimulus was coming i knew it was time to reinvest. This time i did it a lil different though. I borrowed $600 from my best friend witht the promise to return when
                                                             stimulus came in. I purchased a technical analysis course to strengthen my foundation, paid a few bills, and put what was left in the markets. Chooseing to invest in my education paid off immediately. I
-                                                            have started off the year with a pattern of positive trades and consistently getting better returns that what i was able to do from self education alone. 
+                                                            have started off the year with a pattern of positive trades and consistently getting better returns that what i was able to do from self education alone. This time i was able to double my initial investment in less than two weeks!
                                                         </p>
 
                                                             <h4> Alt season is upon us!</h4>
