--- a/articles-bitcoin.html
+++ b/articles-bitcoin.html
@@ -234,7 +234,7 @@
                                 <p> Inquiry - an act of asking for information. Is the world round or flat? Should be an easy answer for most but how do you know? What 
                                     makes that good enough? what other ways of knowing are there? Dive in to the full article for more. </p>
                                     
-                                <a href="articles.html"><button style="width:80px;">GO!</button></a>
+                                <a href="articles-inquiry.html"><button style="width:80px;">GO!</button></a>
                                  <footer>
                                     <ul class= "secondary tags" >
                                         <li>Social science</li>
